objects/Salesforce_Rewind_History_Record__c.object
<CustomObject>
    <description>Used to store a history of changes to the Salesforce Org</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Values__c</fullName>
        <label>New Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Values__c</fullName>
        <label>Old Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>HYPERLINK( RecordId__c , Record_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF( TEXT( Status__c ) == &apos;Undone&apos;, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;Undone&quot;),
IF ( TEXT( Status__c ) == &apos;Undoable&apos;, IMAGE(&quot;/img/permissions_deny16.gif&quot;,  Error__c ),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                    <default>true</default>
                    <label>Done</label>
                </value>
                <value>
                    <fullName>Undone</fullName>
                </value>
                <value>
                    <fullName>Undoable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Salesforce Rewind History Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SObject__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Action__c</columns>
        <columns>RecordId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRHR-{0000}</displayFormat>
        <label>SRHR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Rewind History Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>